Initial movie searching design and code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<html>
+    <head>
+        <title>MVP</title>
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="searchDiv">
+            <img id="searchLogo" src="./res/searchLogo.png">
+            <br>
+            <input id="search">    
+        </div>
+        <br>
+        <button id="confirm" onclick="click()"><b>SEARCH</b></button>
+        <br>
+        <h1 class="error">Your search returned no results, here's something:</h1>
+        <div class="container">
+            <div class="memePage1"></div>
+            <div class="movieInfo"></div>
+            <div class="memePage2"></div>    
+        </div>
+        <script src="script.js"></script>
+    </body>
+</html>
