--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <div id="searchDiv">
             <img id="searchLogo" src="./res/searchLogo.png">
             <br>
-            <input id="search">    
+            <input placeholder="Search for movies" id="search">
         </div>
-        <br>
-        <button id="confirm" onclick="click()"><b>SEARCH</b></button>
         <br>
         <h1 class="error">Your search returned no results, here's something:</h1>
         <div class="container">
