--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         
         </div>
         
+        <script src="meme.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
