--- a/index.html
+++ b/index.html
@@ -12,43 +12,8 @@
         <input placeholder="Search for movies" id="search">
     </div>
     <h2 class="error">Your search returned no results, here's something:</h2>
-    <div class="boxOffice">
-        <table class="rankTable" style="table-layout: auto;">
-
-            <tbody>
-                <h1 class="tophead">Box Office</h1>
-                <tr>
-                    <th class="topRank">
-                        <span>Rank</span>
-                    </th>
-                    <th class="topRelease">
-                        <span>Release</span>
-                    </th>
-                </tr>
-                <tr>
-                    <td class="Topcontent1">1</td>
-                    <td class="Topcontent1 contentSize"><a href="">Avengers: Endgame</a></td>
-                </tr>
-                <tr>
-                    <td class="Topcontent2">2</td>
-                    <td class="Topcontent2 contentSize"><a href="">The Lion King</a></td>
-                </tr>
-                <tr>
-                    <td class="Topcontent1">3</td>
-                    <td class="Topcontent1 contentSize"><a href="">Toy Story 4</a></td>
-                </tr>
-                <tr>
-                    <td class="Topcontent2">4</td>
-                    <td class="Topcontent2 contentSize"><a href="">Frozen II</a></td>
-                </tr>
-                <tr>
-                    <td class="Topcontent1">5</tdclass="Topcontent2">
-                    <td class="Topcontent1 contentSize"><a href="">Captain Marvel</a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="movieInfo"></div>
+    <div class="boxOffice"></div><br>
+    <div class="movieInfo"></div><br>
     <div class="memePage1"></div>
 
     <script src="api.js"></script>
